Updated BsmBuilder partII reference, added a unit test for single partII extension, and aligned test data for J2735 2024
Signed-off-by: dmccoystephenson <dmccoystephenson@gmail.com>